# enclosure

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  enclosure.cc  enclosure_protocol.yml  logger.cc  logger.h  requirements.txt
.github/workflows/: pico-build.yml
cmake/: cmake_install.cmake
cmake/build_variants/: build_variant1.dis  build_variant1.hex  build_variant2.dis  build_variant2.hex  cmake_install.cmake
hello_world/: cmake_install.cmake
hello_world/serial/: cmake_install.cmake  hello_serial.dis  hello_serial.hex
hello_world/usb/: cmake_install.cmake  hello_usb.dis  hello_usb.hex
